# ReqEng_Mosar_November

./: .gitignore  CLAUDE.md  DATABASE_MIGRATION_GUIDE.md  EMBEDDING_GENERATION_REPORT.md  GRAPH_STRUCTURE.md  IMPLEMENTATION_REPORT.md  NEO4J_VIZ_INTEGRATION_PLAN.md  NEXT_STEPS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_STATUS.md  PHASE1_SUCCESS_REPORT.md  REACT_NVL_ARCHITECTURE.md  README.md  SESSION_PROGRESS.md  UI_TECHNOLOGY_COMPARISON.md  VERIFICATION_REPORT.md  backup_neo4j.py  create_similarity_connections.py  ddd_queries.cypher  export_db.py  export_to_cypher.py  generate_embeddings.py  hierarchy_report.txt  import_db.py  import_to_local.py  pdd_queries.cypher  pdd_structure.txt  prd.md  query_srd_structure.cypher  requirements.txt  run_pipeline.py  verify_migration.py
.claude/: settings.local.json
Documents/: MOSAR-WP2-D2.4-SA_1.1.0-Preliminary-Design-Document.md  MOSAR-WP3-D3.5-DLR_1.1.0-Demonstration-Procedures.md  MOSAR-WP3-D3.6-SA_1.2.0-Detailed-Design-Document.md  System Requirements Document_MOSAR.md  mosar_requirements_all.csv
backend/: README.md  requirements.txt
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/models/: schemas.py
backend/src/services/: neo4j_service.py
backup/: statistics.json
config/: entity_vocabulary.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: GraphVisualization.tsx
frontend/src/pages/: HomePage.tsx  RequirementDetailPage.tsx
frontend/src/services/: graph-service.ts  requirements-service.ts
frontend/src/types/: graph.ts  index.ts  requirement.ts
python-graph-visualization-main/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  changelog.md
python-graph-visualization-main/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
python-graph-visualization-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
python-graph-visualization-main/.github/workflows/: code-style.yml  gds-integration-tests.yml  nvl-entrypoint-test.yml  publish_pypi.yml  render-docs.yml  snowflake-integration-tests.yml  unit-tests.yml
python-graph-visualization-main/docs/source/: conf.py  customizing.rst  getting-started.nblink  (+4 more)
python-graph-visualization-main/examples/: .gitignore  streamlit-example.py
python-graph-visualization-main/js-applet/: .gitignore  package.json  tsconfig.json  webpack.config.js
python-graph-visualization-main/python-wrapper/: .gitignore  README.md  pyproject.toml
python-graph-visualization-main/python-wrapper/src/neo4j_viz/: __init__.py  colors.py  gds.py  gql_create.py  neo4j.py  node.py  node_size.py  nvl.py  options.py  pandas.py  relationship.py  snowflake.py  visualization_graph.py
python-graph-visualization-main/python-wrapper/src/neo4j_viz/resources/nvl_entrypoint/: base.js  styles.css
python-graph-visualization-main/python-wrapper/tests/: conftest.py  gds_helper.py  pytest.ini  test_captions.py  test_colors.py  test_gds.py  test_gql_create.py  test_neo4j.py  test_node.py  test_notebooks.py  test_options.py  test_pandas.py  test_pinned.py  test_relationship.py  test_render.py  test_sizes.py  test_snowflake.py
python-graph-visualization-main/scripts/: build_js_applet.sh  checkstyle.sh  clean_js_applet.sh  clean_notebooks.py  generate_linear_colormap.py  makestyle.sh  render_and_host_docs.sh  render_docs.sh  run_streamlit_example.sh
src/ingest/: ingest_documents.py  ingest_requirements.py
src/pipeline/: phase1_covers_relationships.py  phase2_cluster_entities.py  phase2_extract_candidates.py  phase3_add_labels.py  phase3_extract_entities.py  phase4a_req_relationships.py  phase4b_comp_relationships.py
src/schemas/: init_db.py  init_schema.cypher
src/utils/: document_parser.py  document_parser_v2.py  document_parser_v3.py  neo4j_connection.py
(+23 files in other folders)
